auth cookie management

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ LOG_LEVEL=log
 LEGAL_DOMAIN=localhost:7000
 BASE_DOMAIN=http://localhost:7000
 STATIC_DOMAIN=http://localhost:7000
+API_DOMAIN=http://localhost:5000
+SERVER_API_DOMAIN=http://api:5000
+AUTH_COOKIE=__st
