--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint:test:fix": "eslint --fix index.js tests/",
     "lint": "eslint index.js src/ tests/",
     "lint:fix": "eslint --fix index.js src/ tests/",
+    "lint:dev": "eslint --fix --ignore-path .gitignore --rule 'no-console:[0]' index.js src/ tests/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "nodemonConfig": {
@@ -38,16 +39,19 @@
     "dotenv-safe": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.12.2",
+    "js-cookie": "^2.2.0",
     "jss": "^9.8.7",
     "micro-helpers": "^1.1.0",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "next": "^6.1.1",
+    "next-cookies": "^1.0.2",
     "next-routes": "^1.4.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-jss": "^8.6.1",
+    "react-nbsp": "^1.2.1",
     "serve-favicon": "^2.5.0",
     "styled-components": "^3.3.3",
     "uglifycss": "^0.0.29"
