antd tree shaking

--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,7 @@
         }],
         ["import", {
           "libraryName": "antd",
-          "style": "css"
+          "style": true
         }]
       ]
     },
@@ -33,7 +33,7 @@
         }],
         ["import", {
           "libraryName": "antd",
-          "style": "css"
+          "style": true
         }]
       ]
     }
