--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.0",
     "@material-ui/icons": "^1.1.0",
-    "@zeit/next-css": "^0.2.0",
+    "@zeit/next-less": "^0.3.0",
     "aftertime": "^2.0.2",
     "antd": "^3.8.1",
     "axios": "^0.18.0",
@@ -43,6 +43,7 @@
     "helmet": "^3.12.2",
     "js-cookie": "^2.2.0",
     "jss": "^9.8.7",
+    "less": "^3.8.1",
     "micro-helpers": "^1.1.0",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
@@ -54,6 +55,7 @@
     "react-dom": "^16.4.1",
     "react-jss": "^8.6.1",
     "react-nbsp": "^1.2.1",
+    "resolve": "^1.8.1",
     "serve-favicon": "^2.5.0",
     "styled-components": "^3.3.3",
     "uglifycss": "^0.0.29"
