--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "resolve": "^1.8.1",
     "serve-favicon": "^2.5.0",
     "styled-components": "^3.3.3",
+    "styled-normalize": "^8.0.0",
     "uglifycss": "^0.0.29"
   },
   "devDependencies": {
