--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "react-nbsp": "^1.2.1",
     "resolve": "^1.8.1",
     "serve-favicon": "^2.5.0",
-    "styled-components": "^3.3.3",
-    "styled-normalize": "^8.0.0"
+    "styled-components": "^3.3.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
